--- a/Ansible/install-zabbix-agent.yml
+++ b/Ansible/install-zabbix-agent.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: nginx, bastion
+- hosts: nginx, bastion, elastic, kibana
   become: true
   tasks:
   - name: Install required packages
