--- a/terraform/meta.yaml
+++ b/terraform/meta.yaml
@@ -6,6 +6,9 @@ users:
    shell: /bin/bash
    sudo: ['ALL=(ALL) NOPASSWD:ALL']
    ssh-authorized-keys:
-     - ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIALEV1VdJZqmUQ2TWV7yUnlyTOm29ANpNvjsgWlaofWo dedovsg@delta-001
-
+     - ssh-ed25519 
+chpasswd:
+  list: |
+    dedovsg:sys-23
+  expire: False
 
