--- a/Ansible/install-elastic.yml
+++ b/Ansible/install-elastic.yml
@@ -15,11 +15,21 @@
           - gnupg
         state: present
 
-    - name: "Add gpg-key"
-      shell: |
-        wget -qO - https://artifacts.elastic.co/GPG-KEY-elasticsearch | sudo apt-key add
-        echo "deb [trusted=yes] https://mirror.yandex.ru/mirrors/elastic/7/ stable main" | sudo tee /etc/apt/sources.list.d/elastic-7.x.list
-        apt update && apt-get install elasticsearch
+    - name: Import Elastic GPG key
+      ansible.builtin.apt_key:
+        url: https://artifacts.elastic.co/GPG-KEY-elasticsearch
+        state: present
+      ignore_errors: yes
+
+    - name: Add Elastic repository
+      ansible.builtin.apt_repository:
+        repo: "deb https://mirror.yandex.ru/mirrors/elastic/7/ stable main"
+        state: present
+
+    - name: Install Elastic
+      ansible.builtin.apt:
+        name: elasticsearch
+        state: present
 
     - name: Copy config file for elasticsearch
       copy:
